--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
 
                   <!-- Изменение глубины эффекта, накладываемого на изображение -->
                   <fieldset class="img-upload__effect-level effect-level">
-                    <input class="effect-level__value" type="number" name="effect-level" value="20" />
+                    <input class="effect-level__value" type="number" name="effect-level" min="0" max="100" step="1"
+                      value="20" />
                     <div class="effect-level__line">
                       <div class="effect-level__pin" tabindex="0">
                         Кнопка изменения глубины эффекта фотографии
