разделил проект на модули

--- a/index.html
+++ b/index.html
@@ -296,7 +296,14 @@
     </div>
   </template>
 
+  <script src="js/const.js"></script>
+  <script src="js/utils.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/gallery.js"></script>
+  <script src="js/preview.js"></script>
+  <script src="js/scale.js"></script>
+  <script src="js/effects.js"></script>
+  <script src="js/form.js"></script>
 </body>
 
 </html>
