--- a/index.html
+++ b/index.html
@@ -298,12 +298,13 @@
 
   <script src="js/const.js"></script>
   <script src="js/utils.js"></script>
-  <script src="js/main.js"></script>
   <script src="js/gallery.js"></script>
   <script src="js/preview.js"></script>
   <script src="js/scale.js"></script>
   <script src="js/effects.js"></script>
+  <script src="js/saturation.js"></script>
   <script src="js/form.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
