Подключил данные с сервера

--- a/index.html
+++ b/index.html
@@ -296,8 +296,8 @@
     </div>
   </template>
 
-  <script src="js/const.js"></script>
   <script src="js/utils.js"></script>
+  <script src="js/backend.js"></script>
   <script src="js/gallery.js"></script>
   <script src="js/preview.js"></script>
   <script src="js/scale.js"></script>
