--- a/index.html
+++ b/index.html
@@ -298,12 +298,14 @@
 
   <script src="js/utils.js"></script>
   <script src="js/backend.js"></script>
+  <script src="js/success.js"></script>
+  <script src="js/error.js"></script>
   <script src="js/gallery.js"></script>
   <script src="js/preview.js"></script>
   <script src="js/scale.js"></script>
   <script src="js/effects.js"></script>
   <script src="js/saturation.js"></script>
-  <script src="js/form.js"></script>
+  <script src="js/validation.js"></script>
   <script src="js/main.js"></script>
 </body>
 
