--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@
   <script src="js/error.js"></script>
   <script src="js/gallery.js"></script>
   <script src="js/preview.js"></script>
+  <script src="js/filter.js"></script>
   <script src="js/scale.js"></script>
   <script src="js/effects.js"></script>
   <script src="js/saturation.js"></script>
