--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
   <script src="js/saturation.js"></script>
   <script src="js/validation.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/user-picture.js"></script>
 </body>
 
 </html>
